--- a/site-frontend/src/components/Menu/data.css
+++ b/site-frontend/src/components/Menu/data.css
@@ -9,11 +9,15 @@ span{
 }
   .Column_2 {
     top: -3px;
-    left: 181px;
-    width: 339px;
+    left: 172px;
+    width: 344px;
     height: 815px;
     position: absolute;
-    background-color:#7399C6;
+    border-radius:2px;
+    background-color:white;
+    border-width: 3px !important;
+    border: solid #2F4E6D;
+
   }
   .Model_Choice{
     top: -3px;
@@ -21,7 +25,7 @@ span{
     width: 339px;
     height: 815px;
     position: absolute;
-    background-color:#7399C6;
+    background-color:white;
   }
   .Column_3 {
     top: -27px;
@@ -29,8 +33,8 @@ span{
     width: 300px;
     height: 839px;
     position: absolute;
-    background-color:#7399C6;
-    border-width: 0 1px;
+    background-color:white;
+    border-width: medium !important;
     border: solid #2F4E6D;
   }
   .label_size {
@@ -38,9 +42,9 @@ span{
   }
 
   .data-menu2 {
-    top: -2px;
+    top: -1px;
     left: 0px;
-    width: 178px;
+    width: 170px;
     height: 611px;
     display: flex;
     padding: 100px 0;
@@ -49,8 +53,8 @@ span{
     align-items: flex-start;
     flex-shrink: 0;
     border-radius: 4px;
-    background-color:#A0BDE0;
-    border-width: 0 1px;
+    background-color:#7399C6;
+    border-width: medium !important;
     border: solid #000;
   }
   .data-menulist {
@@ -85,6 +89,7 @@ span{
     position: absolute;
     align-items: flex-start;
     flex-shrink: 0;
+    background-color:blue;
   }
   .data-text18 {
     top: 40px;
@@ -99,7 +104,7 @@ span{
     height: 0px;
     position: absolute;
     box-sizing: content-box;
-    background-color:#A0BDE0;
+    background-color:blue;
   }
   .data-input-field10 {
     gap: 8px;
@@ -111,6 +116,8 @@ span{
     align-self:normal;
     position: absolute;
     flex-direction:column;
+    border-width: 2px;
+    border-color: black;
   }
   .data-text20 {
     color: rgba(30, 30, 30, 1);
@@ -133,11 +140,11 @@ span{
     display: flex;
     font-family: Inter;
     font-weight: 400;
-    border-color: rgba(217, 217, 217, 1);
+    border-color: #191970;
     border-style: solid;
-    border-width: 1px;
+    border-width: 1.5px;
     border-radius: 8px;
-    background-color: rgba(255, 255, 255, 1);
+    background-color:#F8F8FF;
   }
   .data-input-field11 {
     gap: 8px;
@@ -233,6 +240,7 @@ span{
     text-align: left;
     line-height: 24px;
     z-index:2;
+    font-size: 20px !important;
   }
   .data-Model {
     top: 37px;
@@ -354,6 +362,7 @@ span{
     position: absolute;
     text-align: left;
     line-height: 24px;
+    font-size:20px !important;
   }
   .Column_4{
     top: 0px;
@@ -362,7 +371,7 @@ span{
     height: 812px;
     position: absolute;
     z-index: 100;
-    background-color:#7399C6;
+    background-color:white;
   }
   .data-rectangle8 {
     top: 100px;
@@ -370,11 +379,11 @@ span{
     width: 400px;
     height: 600px;
     position: absolute;
-    background-color:white;
+    background-color:#D3D3D3;
     align-items: center;
     align-content: center;
     z-index:101;
-    border-width: 2px;
+    border-width: 10px;
     border-radius: 8px;
   }
   .generate-button{
@@ -442,9 +451,12 @@ span{
     height: 290px;
     border-radius:5px;
     position: absolute;
-    background-color:white;
+    background-color:#F8F8FF;
     align-items: center;
     align-content: center;
+    border-width: 0 5px;
+    border: solid #191970;
+    
   }
   .results-page2 {
     top:425px;
@@ -453,9 +465,11 @@ span{
     height: 300px;
     border-radius:5px;
     position: absolute;
-    background-color:white;
+    background-color:#F8F8FF;
     align-items: center;
     align-content: center;
+    border-width: thick;
+    border: solid darkblue;
   }
   .data-text48 {
     top: 258px;
@@ -477,6 +491,7 @@ span{
     text-align: left;
     line-height: 24px;
     z-index:2;
+    font-size: 20px !important;
   }
   .Results-Header{
     top: 40px;
@@ -487,4 +502,5 @@ span{
     text-align: left;
     line-height: 24px;
     z-index:2;
+    font-size:20px !important;
   }
